--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,16 +5,14 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",         // ✅ changed from "bundler"
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-
-    /* Linting */
+    "esModuleInterop": true,            // ✅ added
+    "types": ["@tauri-apps/api"],       // ✅ added
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
